<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="net.qaul.app.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />


    <fragment
        android:id="@+id/navigation_files"
        android:name="net.qaul.app.ui.files.FileFragment"
        android:label="@string/title_files"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="net.qaul.app.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="net.qaul.app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<navigation xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/mobile_navigation"-->
<!--    app:startDestination="@+id/navigation_chat">-->

<!--&lt;!&ndash;    <fragment&ndash;&gt;-->
<!--&lt;!&ndash;        android:id="@+id/navigation_chat"&ndash;&gt;-->
<!--&lt;!&ndash;        android:name="net.qaul.app.ui.chat.ChatFragment"&ndash;&gt;-->
<!--&lt;!&ndash;        android:label="@string/title_chat"&ndash;&gt;-->
<!--&lt;!&ndash;        tools:layout="@layout/fragment_chat" />&ndash;&gt;-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_files"-->
<!--        android:name="net.qaul.app.ui.files.FileFragment"-->
<!--        android:label="@string/title_files"-->
<!--        tools:layout="@layout/fragment_files" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_users"-->
<!--        android:name="net.qaul.app.ui.users.UsersFragment"-->
<!--        android:label="@string/title_users"-->
<!--        tools:layout="@layout/fragment_users" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_settings"-->
<!--        android:name="net.qaul.app.ui.users.UsersFragment"-->
<!--        android:label="@string/title_settings"-->
<!--        tools:layout="@layout/fragment_settings" />-->
<!--</navigation>-->
